fix: fix text overflow from posts' miniatures, improve the styling

--- a/src/components/ImageDivider/ImageDivider.module.scss
+++ b/src/components/ImageDivider/ImageDivider.module.scss
@@ -1,7 +1,7 @@
 .imageDivider {
   position: relative;
   width: 100%;
-  height: 8vw;
+  height: 5vw;
   background-color: transparent;
 
   &::before,
