--- a/src/components/PostsGallery/PostsGallery.module.scss
+++ b/src/components/PostsGallery/PostsGallery.module.scss
@@ -1,10 +1,10 @@
 .postsGalleryContainer {
   width: 100%;
-  min-height: 33vw;
+  min-height: 35vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 8vw 0 2rem 0;
+  margin: 7vw 0 2rem 0;
 }
 
 .postsGallery {
@@ -17,6 +17,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 7vw;
   }
 }
 
@@ -25,6 +26,7 @@
   gap: 1rem;
   margin: 2vw 8vw;
   margin-left: auto;
+  margin-top: auto;
 
   button {
     padding: 1.2rem 1.7rem;
