--- a/src/components/PostsGallery/PostsGalleryItem/PostsGalleryItem.module.scss
+++ b/src/components/PostsGallery/PostsGalleryItem/PostsGalleryItem.module.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
   transition: all 0.1s ease-in-out;
   max-width: 45rem;
-  height: 26vw;
+  min-height: 26vw;
   flex-grow: 1;
   flex-basis: 0;
 
@@ -32,11 +32,11 @@
 
 .descriptionHeader {
   margin-bottom: 1rem;
-  font-size: 1.9rem;
+  font-size: clamp(1.5rem, 5vw, 1.8rem);
   font-family: "AlegreyaSans", sans-serif;
 }
 
 .description {
   font-family: "Cabin", sans-serif;
-  font-size: 1.2rem;
+  font-size: clamp(1.1rem, 2vw, 1.2rem);
 }
